hphp/hack/test/typecheck/reified_generics/type_constants_self_referential.php.like_types.exp
File "type_constants_self_referential.php", line 16, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_self_referential.php", line 6, characters 19-26:
The "as" operator cannot be used with a union
File "type_constants_self_referential.php", line 17, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_self_referential.php", line 8, characters 19-21:
The "as" operator cannot be used with a union
File "type_constants_self_referential.php", line 18, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_self_referential.php", line 12, characters 19-26:
The "as" operator cannot be used with a union
File "type_constants_self_referential.php", line 19, characters 10-20:
Invalid "as" expression hint (Typing[4195])
File "type_constants_self_referential.php", line 24, characters 23-24:
The "as" operator cannot be used with a union
